--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -14,6 +14,4 @@ board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
 upload_speed = 460800
-lib_deps = 
-	moddingear/ESP32 ESC@^1.0.0
-	adafruit/Adafruit NeoPixel@^1.15.1
+lib_deps = moddingear/ESP32 ESC@^1.0.0
