--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -14,4 +14,8 @@ board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
 upload_speed = 460800
+
+test_framework = unity
+test_build_src = yes     
+
 lib_deps = moddingear/ESP32 ESC@^1.0.0
