--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -12,10 +12,12 @@
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 256000
 upload_speed = 460800
 test_framework = unity
 test_build_src = yes
 lib_deps = 
 	moddingear/ESP32 ESC@^1.0.0
 	adafruit/Adafruit MPU6050@^2.2.6
+	rcmags/imuFilter@^1.6.3
+	rcmags/basicMPU6050@^0.3.1
