--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -13,9 +13,9 @@ platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
-upload_speed = 460800
+upload_speed = 921600
 
 test_framework = unity
-test_build_src = yes     
+test_build_src = no
 
 lib_deps = moddingear/ESP32 ESC@^1.0.0
