Tried and failed to get camera running

--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -17,6 +17,7 @@ upload_speed = 921600
 ; upload_speed options are: ..., 460800, 921600
 test_framework = unity
 test_build_src = no
+board_build.esp32_psram = enabled
 
 lib_deps = 
 	moddingear/ESP32 ESC@^1.0.0
@@ -25,3 +26,4 @@ lib_deps =
 	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	esphome/AsyncTCP-esphome@^2.0.3
+	espressif/esp32-camera@^2.0.4
