still working, now with percent() fct

--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -19,9 +19,9 @@ test_framework = unity
 test_build_src = no
 
 ; Forces the use of specific SDA and SCL pins for I2C in case it's needed
-; build_flags = 
-;     -D SDA_PIN=5
-;     -D SCL_PIN=6
+build_flags = 
+     -D SDA_PIN=5
+     -D SCL_PIN=6
 
 
 lib_deps = 
