--- a/3_Software/Firmware/platformio.ini
+++ b/3_Software/Firmware/platformio.ini
@@ -38,5 +38,6 @@ lib_deps =
 	; Using Fermion 10DOF (ADXL345 + ITG3205 + QMC/VCM5883L + BMP280), the files for that are locally in the lib folder (DFRobot_QMC5883-master and ITG3205)
 	; https://github.com/DFRobot/DFRobot_QMC5883.git ; 10DOF liabry, originally by DFRobot used, but modified so no loger need to be imported!! 
 
+    ; Async Webserver for ESPHome, for hosting the web interface to control the hovercraft
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	esphome/AsyncTCP-esphome@^2.0.3
