--- a/3_Software/Firmware/.vscode/settings.json
+++ b/3_Software/Firmware/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "chat.tools.terminal.autoApprove": {
-        "&": true
+        "&": true,
+        "/^C:\\\\Users\\\\lgoeb\\\\\\.platformio\\\\penv\\\\Scripts\\\\platformio\\.exe run$/": {
+            "approve": true,
+            "matchCommandLine": true
+        }
     }
 }
